# Kings-And-Pigs

./: .gitignore  CMakeLists.txt  README.md
googletest/..git/: config  index  packed-refs
googletest/..git/logs/: HEAD
googletest/..git/objects/pack/: pack-0965be93c5370f0fd10aea7f818d9ea9d35f5c28.idx
include/tmxparser/lib/cmake/tmxparser/: tmxparserTargets-debug.cmake  tmxparserTargets.cmake
include/tmxparser/lib/pkgconfig/: tmxparser.pc
maps/: lvl1.tmx
src/: ActiveEnemies.cpp  ActiveEnemies.h  Animation.cpp  Animation.h  AnimationManager.cpp  AnimationManager.h  BoundariesComponent.cpp  BoundariesComponent.h  Box.cpp  Box.h  CMakeLists.txt  Components.h  Constants.h  DebugRenderer.cpp  DebugRenderer.h  Entity.cpp  Entity.h  EntityFactory.cpp  EntityFactory.h  Game.cpp  Game.h  HitBoxComponent.cpp  HitBoxComponent.h  InputCommands.h  InputCommands.hpp  InvisibleBoundaries.cpp  InvisibleBoundaries.h  Item.cpp  Item.h  LevelController.cpp  LevelController.h  LoopedAnimation.cpp  LoopedAnimation.h  Map.cpp  Map.h  OnetimeAnimation.cpp  OnetimeAnimation.h  Pig.cpp  Pig.h  Platformer.cpp  (+19 more)
src/maps/: lvl1.tmx  lvl2.tmx
tests/: CMakeLists.txt  MyTest.cpp
tinyxml2/: CMakeLists.txt
